@@ -14,3 +14,4 @@ require 'active_merchant/billing/gateways/payflow_express'
 require 'active_merchant/billing/gateways/payflow_uk'
 require 'active_merchant/billing/gateways/payflow_express_uk'
 require 'active_merchant/billing/gateways/data_cash'
+require 'active_merchant/billing/gateways/card_stream'
